--- a/.github/workflows/download_aggTrades.yml
+++ b/.github/workflows/download_aggTrades.yml
@@ -41,7 +41,6 @@ jobs:
 
       - name: Calculate date window
         id: dates
-        shell: bash
         run: |
           echo "global_start=${{ github.event.inputs.start_date }}" >> "$GITHUB_OUTPUT"
           echo "global_end=${{ github.event.inputs.end_date }}"   >> "$GITHUB_OUTPUT"
@@ -53,7 +52,7 @@ jobs:
           SD_GLOBAL=${{ steps.dates.outputs.global_start }}
           ED=${{ steps.dates.outputs.global_end }}
 
-          # 1) Inception-Datum wählen per case/esac
+          # 1) Inception-Datum wählen
           case "$SYMBOL" in
             BTCUSDT|ETHUSDT) INCEP="2019-12-31" ;;
             XRPUSDT)        INCEP="2020-01-06" ;;
@@ -63,7 +62,7 @@ jobs:
             *)              INCEP="$SD_GLOBAL" ;;
           esac
 
-          # 2) SD = max(global_start, inception) per POSIX-Test
+          # 2) SD = max(global_start, inception)
           t_global=$(date -d "$SD_GLOBAL" +%s)
           t_incep=$(date -d "$INCEP"     +%s)
           if [ "$t_global" -lt "$t_incep" ]; then
@@ -75,12 +74,11 @@ jobs:
           # 3) Overlap: einen Tag vor Block-Beginn laden
           SD_RAW=$(date -I -d "$SD -1 day")
 
-          # 4) Download & unzip
+          # 4) Download & unzip bis inkl. ED
           RAW_DIR="data/aggTrades/$SYMBOL"
           mkdir -p "$RAW_DIR"
           CUR="$SD_RAW"
-          # jetzt inklusive Enddatum: < OR == 
-          while [[ "$CUR" < "$ED" || "$CUR" == "$ED" ]]; do
+          while [ "$CUR" '<=' "$ED" ] || [ "$CUR" = "$ED" ]; do
             ZIP="${SYMBOL}-aggTrades-${CUR}.zip"
             URL="https://data.binance.vision/data/futures/um/daily/aggTrades/${SYMBOL}/${ZIP}"
             echo "Downloading $ZIP"
